--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "gatsby": "^1.9.241",
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-react-helmet": "^2.0.8",
-    "react-helmet": "^5.2.0",
-    "react-scroll-parallax": "^1.3.3",
-    "react-toolbox": "^2.0.0-beta.12"
+    "gatsby-plugin-typography": "^1.7.18",
+    "react-helmet": "^5.2.0"
   },
   "keywords": [
     "gatsby"
